# just-fetch

./: Cargo.toml
src/: fetch.rs  lib.rs  main.rs
