[package]
name = "just-fetch"
version = "0.1.0"
authors = ["Randy Schütt <rswhite4@googlemail.com>"]
edition = "2018"

[dependencies]
just-core = { git = "https://github.com/just-cli/just-core" }
just-versions = { git = "https://github.com/just-cli/just-versions" }
log = "0.4.6"
structopt = "0.2.14"

[features]
lib = []